@@ -285,10 +285,13 @@ InterlockedCompareExchange(volatile gint32 *dest,
 {
 	gint32 old;
 
-	__asm__ __volatile__ ("\tL\t%1,%0\n"
-			      "\tLA\t1,%0\n"
-			      "0:\tCS\t%3,%2,0(1)\n"
+	__asm__ __volatile__ ("\tLA\t1,%0\n"
+			      "0:\tL\t%1,%0\n"
+			      "\tCR\t%1,%3\n"
+			      "\tJNE\t1f\n"
+			      "\tCS\t%1,%2,0(1)\n"
 			      "\tJNZ\t0b\n"
+			      "1:\n"
 			      : "+m" (*dest), "+r" (old)
 			      : "r" (exch), "r" (comp)
 			      : "1", "cc");	
@@ -303,11 +306,18 @@ InterlockedCompareExchangePointer(volatile gpointer *dest,
 				  gpointer exch, 
 			          gpointer comp)
 {
+	gpointer old;
+
 	__asm__ __volatile__ ("\tLA\t1,%0\n"
+			      "0:\tLG\t%1,%0\n"
+			      "\tCGR\t%1,%3\n"
+			      "\tJNE\t1f\n"
 			      "\tCSG\t%1,%2,0(1)\n"
-			      : "+m" (*dest), "+r" (comp)
-			      : "r" (exch)
-			      : "1", "2", "cc");
+			      "\tJNZ\t0b\n"
+			      "1:\n"
+			      : "+m" (*dest), "+r" (old)
+			      : "r" (exch), "r" (comp)
+			      : "1", "cc");
 
 	return(comp);
 }
