@@ -5424,10 +5424,12 @@ mono_ArgIterator_Setup (MonoArgIterator *iter, char* argsp, char* start)
 	} else {
 		int i, align, arg_size;
 		iter->args = argsp + sizeof (gpointer);
+#ifndef MONO_ARCH_REGPARMS
 		for (i = 0; i < iter->sig->sentinelpos; ++i) {
 			arg_size = mono_type_stack_size (iter->sig->params [i], &align);
 			iter->args = (char*)iter->args + arg_size;
 		}
+#endif
 	}
 	iter->num_args = iter->sig->param_count - iter->sig->sentinelpos;
 
